# rvi_v2x_firmware

./: .gitignore  CMakeLists.txt
V2X_Firmware/src/V2X/: V2X.h  V2X_can.c
