cmake_minimum_required(VERSION 3.8)
project(rvi_v2x_firmware)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        V2X_Firmware/src/ASF/common/boards/user_board/init.c
        V2X_Firmware/src/ASF/common/boards/user_board/user_board.h
        V2X_Firmware/src/ASF/common/boards/board.h
        V2X_Firmware/src/ASF/common/boards/user_board.h
        V2X_Firmware/src/ASF/common/drivers/nvm/xmega/xmega_nvm.c
        V2X_Firmware/src/ASF/common/drivers/nvm/common_nvm.h
        V2X_Firmware/src/ASF/common/services/calendar/calendar.c
        V2X_Firmware/src/ASF/common/services/calendar/calendar.h
        V2X_Firmware/src/ASF/common/services/clock/xmega/osc.h
        V2X_Firmware/src/ASF/common/services/clock/xmega/pll.h
        V2X_Firmware/src/ASF/common/services/clock/xmega/sysclk.c
        V2X_Firmware/src/ASF/common/services/clock/xmega/sysclk.h
        V2X_Firmware/src/ASF/common/services/clock/genclk.h
        V2X_Firmware/src/ASF/common/services/clock/osc.h
        V2X_Firmware/src/ASF/common/services/clock/pll.h
        V2X_Firmware/src/ASF/common/services/clock/sysclk.h
        V2X_Firmware/src/ASF/common/services/cpu/reset_cause.h
        V2X_Firmware/src/ASF/common/services/delay/xmega/cycle_counter.h
        V2X_Firmware/src/ASF/common/services/delay/delay.h
        V2X_Firmware/src/ASF/common/services/gpio/xmega_gpio/xmega_gpio.h
        V2X_Firmware/src/ASF/common/services/gpio/gpio.h
        V2X_Firmware/src/ASF/common/services/hugemem/avr8/avr8_hugemem.c
        V2X_Firmware/src/ASF/common/services/hugemem/avr8/hugemem.h
        V2X_Firmware/src/ASF/common/services/hugemem/generic/hugemem.h
        V2X_Firmware/src/ASF/common/services/hugemem/hugemem.h
        V2X_Firmware/src/ASF/common/services/ioport/xmega/ioport.h
        V2X_Firmware/src/ASF/common/services/ioport/xmega/ioport_compat.c
        V2X_Firmware/src/ASF/common/services/ioport/xmega/ioport_compat.h
        V2X_Firmware/src/ASF/common/services/ioport/ioport.h
        V2X_Firmware/src/ASF/common/services/serial/xmega_usart/usart_serial.h
        V2X_Firmware/src/ASF/common/services/serial/serial.h
        V2X_Firmware/src/ASF/common/services/serial/usart_serial.c
        V2X_Firmware/src/ASF/common/services/sleepmgr/xmega/sleepmgr.c
        V2X_Firmware/src/ASF/common/services/sleepmgr/xmega/sleepmgr.h
        V2X_Firmware/src/ASF/common/services/sleepmgr/sleepmgr.h
        V2X_Firmware/src/ASF/common/services/spi/xmega_spi/spi_master.c
        V2X_Firmware/src/ASF/common/services/spi/xmega_spi/spi_master.h
        V2X_Firmware/src/ASF/common/services/spi/spi_master.h
        V2X_Firmware/src/ASF/common/services/storage/ctrl_access/ctrl_access.c
        V2X_Firmware/src/ASF/common/services/storage/ctrl_access/ctrl_access.h
        V2X_Firmware/src/ASF/common/services/usb/class/cdc/device/udi_cdc.c
        V2X_Firmware/src/ASF/common/services/usb/class/cdc/device/udi_cdc.h
        V2X_Firmware/src/ASF/common/services/usb/class/cdc/device/udi_cdc_conf.h
        V2X_Firmware/src/ASF/common/services/usb/class/cdc/device/udi_cdc_desc.c
        V2X_Firmware/src/ASF/common/services/usb/class/cdc/usb_protocol_cdc.h
        V2X_Firmware/src/ASF/common/services/usb/udc/udc.c
        V2X_Firmware/src/ASF/common/services/usb/udc/udc.h
        V2X_Firmware/src/ASF/common/services/usb/udc/udc_desc.h
        V2X_Firmware/src/ASF/common/services/usb/udc/udd.h
        V2X_Firmware/src/ASF/common/services/usb/udc/udi.h
        V2X_Firmware/src/ASF/common/services/usb/usb_atmel.h
        V2X_Firmware/src/ASF/common/services/usb/usb_protocol.h
        V2X_Firmware/src/ASF/common/utils/interrupt/interrupt_avr8.h
        V2X_Firmware/src/ASF/common/utils/stdio/stdio_serial/stdio_serial.h
        V2X_Firmware/src/ASF/common/utils/stdio/stdio_usb/stdio_usb.c
        V2X_Firmware/src/ASF/common/utils/stdio/stdio_usb/stdio_usb.h
        V2X_Firmware/src/ASF/common/utils/stdio/read.c
        V2X_Firmware/src/ASF/common/utils/stdio/write.c
        V2X_Firmware/src/ASF/common/utils/interrupt.h
        V2X_Firmware/src/ASF/common/utils/parts.h
        V2X_Firmware/src/ASF/thirdparty/wireless/addons/sio2host/usb/sio2host.c
        V2X_Firmware/src/ASF/thirdparty/wireless/addons/sio2host/usb/sio2host.h
        V2X_Firmware/src/ASF/xmega/drivers/ac/ac.c
        V2X_Firmware/src/ASF/xmega/drivers/ac/ac.h
        V2X_Firmware/src/ASF/xmega/drivers/adc/xmega_aau/adc_aau.c
        V2X_Firmware/src/ASF/xmega/drivers/adc/adc.c
        V2X_Firmware/src/ASF/xmega/drivers/adc/adc.h
        V2X_Firmware/src/ASF/xmega/drivers/cpu/ccp.h
        V2X_Firmware/src/ASF/xmega/drivers/cpu/xmega_reset_cause.h
        V2X_Firmware/src/ASF/xmega/drivers/dma/dma.c
        V2X_Firmware/src/ASF/xmega/drivers/dma/dma.h
        V2X_Firmware/src/ASF/xmega/drivers/nvm/nvm.c
        V2X_Firmware/src/ASF/xmega/drivers/nvm/nvm.h
        V2X_Firmware/src/ASF/xmega/drivers/pmic/pmic.h
        V2X_Firmware/src/ASF/xmega/drivers/rtc/rtc.c
        V2X_Firmware/src/ASF/xmega/drivers/rtc/rtc.h
        V2X_Firmware/src/ASF/xmega/drivers/sleep/sleep.h
        V2X_Firmware/src/ASF/xmega/drivers/spi/spi.c
        V2X_Firmware/src/ASF/xmega/drivers/spi/spi.h
        V2X_Firmware/src/ASF/xmega/drivers/tc/tc.c
        V2X_Firmware/src/ASF/xmega/drivers/tc/tc.h
        V2X_Firmware/src/ASF/xmega/drivers/usart/usart.c
        V2X_Firmware/src/ASF/xmega/drivers/usart/usart.h
        V2X_Firmware/src/ASF/xmega/drivers/usb/usb_device.c
        V2X_Firmware/src/ASF/xmega/drivers/usb/usb_device.h
        V2X_Firmware/src/ASF/xmega/drivers/wdt/wdt.c
        V2X_Firmware/src/ASF/xmega/drivers/wdt/wdt.h
        V2X_Firmware/src/ASF/xmega/services/pwm/pwm.c
        V2X_Firmware/src/ASF/xmega/services/pwm/pwm.h
        V2X_Firmware/src/ASF/xmega/utils/assembler/gas.h
        V2X_Firmware/src/ASF/xmega/utils/bit_handling/clz_ctz.h
        V2X_Firmware/src/ASF/xmega/utils/preprocessor/mrepeat.h
        V2X_Firmware/src/ASF/xmega/utils/preprocessor/preprocessor.h
        V2X_Firmware/src/ASF/xmega/utils/preprocessor/stringz.h
        V2X_Firmware/src/ASF/xmega/utils/preprocessor/tpaste.h
        V2X_Firmware/src/ASF/xmega/utils/assembler.h
        V2X_Firmware/src/ASF/xmega/utils/compiler.h
        V2X_Firmware/src/ASF/xmega/utils/progmem.h
        V2X_Firmware/src/ASF/xmega/utils/status_codes.h
        V2X_Firmware/src/Config/conf_access.h
        V2X_Firmware/src/Config/conf_adc.h
        V2X_Firmware/src/Config/conf_board.h
        V2X_Firmware/src/Config/conf_clock.h
        V2X_Firmware/src/Config/conf_nvm.h
        V2X_Firmware/src/Config/conf_rtc.h
        V2X_Firmware/src/Config/conf_sio2host.h
        V2X_Firmware/src/Config/conf_sleepmgr.h
        V2X_Firmware/src/Config/conf_spi_master.h
        V2X_Firmware/src/Config/conf_usart_serial.h
        V2X_Firmware/src/Config/conf_usb.h
        V2X_Firmware/src/V2X/extra_files/conf_board.h
        V2X_Firmware/src/V2X/extra_files/conf_clock.h
        V2X_Firmware/src/V2X/extra_files/conf_usb.h
        V2X_Firmware/src/V2X/extra_files/user_board.h
        V2X_Firmware/src/V2X/conf_clock.h
        V2X_Firmware/src/V2X/V2X.h
        V2X_Firmware/src/V2X/V2X_Accel.c
        V2X_Firmware/src/V2X/V2X_Accel.h
        V2X_Firmware/src/V2X/V2X_board.h
        V2X_Firmware/src/V2X/V2X_button.c
        V2X_Firmware/src/V2X/V2X_button.h
        V2X_Firmware/src/V2X/V2X_can.c
        V2X_Firmware/src/V2X/V2X_can.h
        V2X_Firmware/src/V2X/V2X_control.c
        V2X_Firmware/src/V2X/V2X_control.h
        V2X_Firmware/src/V2X/V2X_car_state_check.c
        V2X_Firmware/src/V2X/V2X_car_state_check.h
        V2X_Firmware/src/V2X/V2X_eeprom.c
        V2X_Firmware/src/V2X/V2X_eeprom.h
        V2X_Firmware/src/V2X/V2X_gsm.c
        V2X_Firmware/src/V2X/V2X_gsm.h
        V2X_Firmware/src/V2X/V2X_init.c
        V2X_Firmware/src/V2X/V2X_init.h
        V2X_Firmware/src/V2X/V2X_led.c
        V2X_Firmware/src/V2X/V2X_led.h
        V2X_Firmware/src/V2X/V2X_menu.c
        V2X_Firmware/src/V2X/V2X_menu.h
        V2X_Firmware/src/V2X/V2X_power.c
        V2X_Firmware/src/V2X/V2X_power.h
        V2X_Firmware/src/V2X/V2X_spi.c
        V2X_Firmware/src/V2X/V2X_spi.h
        V2X_Firmware/src/V2X/V2X_time.c
        V2X_Firmware/src/V2X/V2X_time.h
        V2X_Firmware/src/V2X/V2X_uart.c
        V2X_Firmware/src/V2X/V2X_uart.h
        V2X_Firmware/src/V2X/V2X_usb.c
        V2X_Firmware/src/V2X/V2X_usb.h
        V2X_Firmware/src/asf.h
        V2X_Firmware/src/main.c)

add_executable(rvi_v2x_firmware ${SOURCE_FILES})

include_directories(/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/Atmel/usr/include)
add_definitions(-DOSX)
add_definitions(-DXMEGA=1)